// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tasks Ending Screen completed state 1`] = `
.c3 {
  margin-top: 3rem;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  min-height: 400px;
  width: 960px;
  border-radius: 0.25rem;
  margin: 0 auto 5rem auto;
  border: 1px solid #e4e4e4;
  border-radius: 0.25rem;
  background-color: white;
}

.c0 {
  padding: 2rem;
}

.c2 {
  padding: 50px 140px;
}

<div
  className="openstax-debug-content"
>
  <div
    data-purpose="tour-conductor-wrapper"
  >
    <div>
      <div
        className="c0"
      >
        <div
          className="c1 task-steps-end"
        >
          <div
            className="c2"
          >
            <h1>
              You are done.
            </h1>
            <h3>
              Great job 
              answering all the questions
              .
            </h3>
            <a
              className="btn btn-default c3"
              href="/course/3"
              onClick={[Function]}
            >
              Back to dashboard
            </a>
          </div>
        </div>
      </div>
    </div>
    <div
      className="visible-when-debugging"
    >
      <div
        className="tour-spy-info"
      >
        available regions: []; region tour ids: []; audience tags: []; tour tags: []; eligible tours: []; TOUR RIDE: &lt;none&gt;
      </div>
    </div>
  </div>
  <a
    aria-hidden="true"
    className="debug-toggle-link"
    href="#spy"
    onClick={[Function]}
    tabIndex={-1}
  >
    π
  </a>
</div>
`;

exports[`Tasks Ending Screen completed state 2`] = `
.c3 {
  margin-top: 3rem;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  min-height: 400px;
  width: 960px;
  border-radius: 0.25rem;
  margin: 0 auto 5rem auto;
  border: 1px solid #e4e4e4;
  border-radius: 0.25rem;
  background-color: white;
}

.c0 {
  padding: 2rem;
}

.c2 {
  padding: 50px 140px;
}

<div
  className="openstax-debug-content"
>
  <div
    data-purpose="tour-conductor-wrapper"
  >
    <div>
      <div
        className="c0"
      >
        <div
          className="c1 task-steps-end"
        >
          <div
            className="c2"
          >
            <h1>
              You are done.
            </h1>
            <h3>
              Great job 
              completing all the steps
              .
            </h3>
            <a
              className="btn btn-default c3"
              href="/course/3"
              onClick={[Function]}
            >
              Back to dashboard
            </a>
          </div>
        </div>
      </div>
    </div>
    <div
      className="visible-when-debugging"
    >
      <div
        className="tour-spy-info"
      >
        available regions: []; region tour ids: []; audience tags: []; tour tags: []; eligible tours: []; TOUR RIDE: &lt;none&gt;
      </div>
    </div>
  </div>
  <a
    aria-hidden="true"
    className="debug-toggle-link"
    href="#spy"
    onClick={[Function]}
    tabIndex={-1}
  >
    π
  </a>
</div>
`;

exports[`Tasks Ending Screen not started state 1`] = `
.c3 {
  margin-top: 3rem;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  min-height: 400px;
  width: 960px;
  border-radius: 0.25rem;
  margin: 0 auto 5rem auto;
  border: 1px solid #e4e4e4;
  border-radius: 0.25rem;
  background-color: white;
}

.c0 {
  padding: 2rem;
}

.c2 {
  padding: 50px 140px;
}

<div
  className="openstax-debug-content"
>
  <div
    data-purpose="tour-conductor-wrapper"
  >
    <div>
      <div
        className="c0"
      >
        <div
          className="c1 task-steps-end"
        >
          <div
            className="c2"
          >
            <h1>
              No steps have been completed.
            </h1>
            <h4>
              <a
                href="/course/1/task/1/step/1"
                onClick={[Function]}
              >
                Begin work on assignment
              </a>
            </h4>
            <a
              className="btn btn-default c3"
              href="/course/1"
              onClick={[Function]}
            >
              Back to dashboard
            </a>
          </div>
        </div>
      </div>
    </div>
    <div
      className="visible-when-debugging"
    >
      <div
        className="tour-spy-info"
      >
        available regions: []; region tour ids: []; audience tags: []; tour tags: []; eligible tours: []; TOUR RIDE: &lt;none&gt;
      </div>
    </div>
  </div>
  <a
    aria-hidden="true"
    className="debug-toggle-link"
    href="#spy"
    onClick={[Function]}
    tabIndex={-1}
  >
    π
  </a>
</div>
`;

exports[`Tasks Ending Screen partial state 1`] = `
.c3 {
  margin-top: 3rem;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  min-height: 400px;
  width: 960px;
  border-radius: 0.25rem;
  margin: 0 auto 5rem auto;
  border: 1px solid #e4e4e4;
  border-radius: 0.25rem;
  background-color: white;
}

.c0 {
  padding: 2rem;
}

.c2 {
  padding: 50px 140px;
}

<div
  className="openstax-debug-content"
>
  <div
    data-purpose="tour-conductor-wrapper"
  >
    <div>
      <div
        className="c0"
      >
        <div
          className="c1 task-steps-end"
        >
          <div
            className="c2"
          >
            <h1>
              Assignment is partially complete.
            </h1>
            <h3>
              You've completed 
              1
               of 
              2
               steps.
            </h3>
            <a
              className="btn btn-default c3"
              href="/course/2"
              onClick={[Function]}
            >
              Back to dashboard
            </a>
          </div>
        </div>
      </div>
    </div>
    <div
      className="visible-when-debugging"
    >
      <div
        className="tour-spy-info"
      >
        available regions: []; region tour ids: []; audience tags: []; tour tags: []; eligible tours: []; TOUR RIDE: &lt;none&gt;
      </div>
    </div>
  </div>
  <a
    aria-hidden="true"
    className="debug-toggle-link"
    href="#spy"
    onClick={[Function]}
    tabIndex={-1}
  >
    π
  </a>
</div>
`;
